# WorkingtitleMusic

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build-win.sh  build.rs  rust-toolchain.toml
assets/: garage musician Klarinette.gltf  garage musician default.gltf  garage musician default_2c.gltf  garage musician drums.gltf  garage musician guitar.gltf  garage musician keyboard.gltf  garage musician model.gltf  garage musician streicher.gltf  garage musician trompete.gltf  garrage.gltf  house.gltf  house_v2.gltf  pedestal.gltf
assets/house/: house.gltf
audio/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
audio/Metadata/Asset/: {1c3298a3-6bb3-428a-92be-40298b46f5fe}.xml  {1d70fd8c-6ea2-4583-9569-ad338947b365}.xml  {2fd94392-e1f5-486c-85f6-0348b79299ce}.xml  {370eb903-449e-418a-9b21-3faab4f860a1}.xml  {49ecc08c-0f28-45ab-88f6-d78d5518dde5}.xml  {5bb1a6df-a817-4862-966b-c5a26a022203}.xml  {682d2635-8267-4e50-9d67-f90429d91c65}.xml
audio/Metadata/AudioFile/: {204275f2-d528-4b25-8eb0-1720de358f6b}.xml  {3015ec5d-7e30-492b-9ab4-d90f82a15c2c}.xml  (+18 more)
src/: game.rs  main.rs  menu.rs  splash.rs  utility.rs
src/game/: assets.rs  audio.rs  heatstroke.rs  mouse.rs  pedestal.rs  window.rs
src_assets/: garrage.blend  house.blend  pedestal.blend
src_assets/house/: house.blend  house.gltf
src_assets/musician/: garage musician Guitar.blend  garage musician Klarinette.blend  garage musician default.blend  garage musician default_2a.blend  garage musician default_2c.blend  garage musician drums.blend  garage musician keyboard.blend  garage musician model.blend  garage musician streicher.blend  garage musician trompete.blend
(+48 files in other folders)
